--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+publish_to: none
 name: flutter_openim_widget
 description: The public ui library is used with the openim demo, and you can directly use it for secondary development.
 version: 0.0.9
@@ -35,7 +36,9 @@ dependencies:
   video_player: ^2.3.0
   flutter_cache_manager: ^3.3.0
   mime_type: ^1.0.0
-  flutter_openim_sdk: ^2.0.0+4
+  flutter_openim_sdk:
+    git:
+      url:  https://github.com/hustlemickey/Open-IM-SDK-Flutter.git
 #  flutter_openim_sdk:
 #    path: ../flutter_openim_sdk
 
